# animate_GPS

./: Map.py  README.md  Radar.py  pyproject.toml
flaskr/: __init__.py  db.py  schema.sql
flaskr/templates/: upload.html
radar_app/: Radar.py  __init__.py  application.py  db.py  firefox
radar_app/templates/: upload.html
socket_test_app/: application.py
socket_test_app/templates/: index.html
