[tool.poetry]
name = "animate_gps"
version = "0.1.0"
description = ""
authors = ["Selim"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
flask = "^1.1.2"
pytest = "^6.2.1"
pandas = "*"
gpxpy = "*"
folium = "^0.11.0"
selenium = "^3.141.0"
webdriver-manager = "^3.2.2"
joblib = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
